[package]
name = "todo"
version = "0.1.0"
authors = ["Roger Coll <roger.coll.aumatell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["sync"]